--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -59,13 +59,15 @@ section {
   margin: 0 auto;
   padding: 2rem;
 }
+#svg-bg { margin-top: 10rem; }
 header {
-  margin: 62px 0 0 0;
+  max-width: 800px;
+  margin: 5rem auto;
   z-index: 10;
   @include clearfix;
 
   h1 {
-    margin: 1.4em auto;
+    margin: 1.4rem auto;
     padding: 0 2rem;
   }
   p {
