--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -3017,4 +3017,40 @@ form {
     .projects .project a {
       color: #333; }
 
+.flex-boxes {
+  align-items: stretch;
+  clear: both;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center; }
+  .flex-boxes::after {
+    clear: both;
+    content: "";
+    display: table; }
+  .flex-boxes .flex-box {
+    align-self: stretch;
+    background: #fafafa;
+    border: 1px solid #E0E0E0;
+    box-shadow: inset 0 0 1px #E0E0E0, 0 2px 4px #e6e6e6;
+    display: block;
+    flex: 3 3 10em;
+    margin: 0.4em;
+    padding: 1rem;
+    text-decoration: none;
+    transition: all 0.2s ease-in-out; }
+    .flex-boxes .flex-box .flex-image {
+      width: 100%;
+      height: 150px;
+      overflow: hidden;
+      display: block;
+      margin: 0 auto 1em; }
+      .flex-boxes .flex-box .flex-image img {
+        display: block;
+        width: 100%; }
+    .flex-boxes .flex-box a:link, .flex-boxes .flex-box a:active, .flex-boxes .flex-box a:visited {
+      color: #333;
+      line-height: 1.5em;
+      margin: auto; }
+
 /*# sourceMappingURL=main.css.map */
