--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -30,6 +30,20 @@ $centered-navigation-item-padding: 1em;
 $centered-navigation-item-nudge: 2.2em;
 $horizontal-bar-mode: $large-screen;
 
+$flex-box-border-color: $light-gray;
+$flex-box-border: 1px solid $flex-box-border-color;
+$flex-box-background: lighten($light-gray, 10%);
+$flex-box-gutter: 0.4em;
+$flex-box-width: 18em;
+$flex-box-color: transparentize($base-font-color, 0.3);
+$flex-box-top-colors:
+  tomato,
+  #72BFBF,
+  #92B1E3,
+  #E3D743,
+  #CCC,
+    #F6C05C;
+
 @import "bourbon/bourbon";
 @import "neat/neat";
 @import "font-awesome";
@@ -486,6 +500,47 @@ form {
     background: none;
     padding: 1rem 0;
     a { color: $dark-gray; }
+  }
+}
+
+.flex-boxes {
+  @include clearfix;
+  align-items: stretch;
+  clear: both;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+
+  .flex-box {
+    align-self: stretch;
+    background: $flex-box-background;
+    border: 1px solid $light-gray;
+    box-shadow: inset 0 0 1px $flex-box-border-color, 0 2px 4px darken($base-background-color, 10%);
+    display: block;
+    flex: 3 3 10em;
+    margin: $flex-box-gutter;
+    padding: 1rem;
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+
+    .flex-image {
+      width: 100%;
+      height: 150px;
+      overflow: hidden;
+      display: block;
+      margin: 0 auto 1em;
+
+      img {
+        display: block;
+        width: 100%;
+      }
+    }
+    a:link, a:active, a:visited{
+      color: $dark-gray;
+      line-height: 1.5em;
+      margin: auto;
+    }
   }
 }
 
