--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -10,10 +10,15 @@ $action-color: #CC3B6A;
 $action-color-darker: #992C50;
 $accent-color: #799299;
 
+$base-line-height: 1.5em !default;
+$base-spacing: 1.5em !default;
+$medium-screen: 40em !default;
+$serif: 'Lusitana', serif;
+$serif-2: 'Merriweather', serif;
+$sans-serif: 'Merriweather Sans', sans-serif;
+
 $base-border-radius: 3px !default;
 $base-background-color: $white !default;
-$base-spacing: 1.5em !default;
-$base-font-color: $dark-gray !default;
 
 $card-border-color: $accent-color;
 $card-border: 1px solid $card-border-color;
@@ -42,7 +47,7 @@ $flex-box-top-colors:
   #92B1E3,
   #E3D743,
   #CCC,
-    #F6C05C;
+  #F6C05C;
 
 @import "bourbon/bourbon";
 @import "neat/neat";
@@ -63,10 +68,6 @@ html { font-size: 62.5%; }
 body {
   margin: 0;
   padding: 0;
-  font-family: $body-copy;
-  font-size: 1.8rem;
-  text-align: left;
-  color: $base-font-color;
 }
 section {
   max-width: 800px;
@@ -79,11 +80,6 @@ header {
   margin: 5rem auto;
   z-index: 10;
   @include clearfix;
-
-  h1 {
-    margin: 1.4rem auto;
-    padding: 0 2rem;
-  }
   p {
     max-width: 700px;
     text-align: center;
@@ -93,6 +89,7 @@ header {
 }
 .social-media {
   @include clearfix;
+  margin-bottom: 1em;
 
   ul {
     width: 215px;
@@ -109,7 +106,7 @@ header {
     float: left;
     background: url("../../images/inactiveHex.png") no-repeat center top;
     background-size: 44px;
-    .fa { font-size: 1.6em; }
+    .fa { font-size: 2.6em; }
   }
   .activeHex {
     background: url("../../images/activeHex.png") no-repeat center top;
@@ -157,47 +154,140 @@ header {
 
 
 // Typography //
-h1, h2, h3, h4 {
-  font-family: $header-copy;
-  color: $accent-color;
-}
-h1 {
-  font-weight: normal;
-  font-size: 3.4rem;
-  text-align: center;
+body {
+  font-family: $serif-2;
+  text-align: left;
 
-  @include media ($large-screen) { font-size: 3.2rem; }
-}
-h2 {
-  font-weight: normal;
-  font-size: 4rem;
-  text-align: center;
+  h1, h2, h3, p {
+    margin: 0;
+  }
 
-  @include media ($large-screen) { font-size: 5rem; }
-}
-h3 {
-  font-weight: normal;
-  font-size: 2.5rem;
-  margin: .5rem 0;
+  hr {
+    border-bottom: 1px solid $light-gray;
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+    margin: $base-spacing 0;
+  }
 
-  @include media ($large-screen) { font-size: 2.8rem; }
+  p {
+    color: $base-font-color;
+    line-height: $base-line-height;
+  }
+
+  a {
+    color: $action-color;
+    text-decoration: none;
+  }
+
+  .type {
+    border-bottom: 1px solid;
+    display: inline-block;
+    font-family: $sans-serif;
+    font-size: 0.7em;
+    font-weight: 700;
+    margin-bottom: 2em;
+    padding: 0.3em 0;
+    text-align: left;
+    text-transform: uppercase;
+  }
+
+  h1 {
+    font-family: $serif;
+    font-size: 3.4em;
+    font-weight: 700;
+    margin-bottom: 1em;
+    padding: 0 1em;
+    text-align: center;
+    color: $accent-color;
+
+    @include media($medium-screen) {
+      font-size: 4.6em;
+    }
+  }
+
+  h2 {
+    font-family: $serif-2;
+    font-size: 3em;
+    font-weight: 400;
+    line-height: 1em;
+    margin-bottom: 0.9em;
+    padding: 0 1em;
+    text-align: center;
+    color: $accent-color;
+
+    @include media($medium-screen) {
+      font-size: 4.2em;
+    }
+  }
+
+  code {
+    background: #F7F7F7;
+    border-radius: $base-border-radius * 1.5;
+    border: 1px solid #E0E0E0;
+    font-family: monaco;
+    font-size: 0.75em;
+    font-style: normal;
+    padding: 0.1em 0.4em;
+    white-space: nowrap;
+  }
+
+  h3 {
+    font-family: $serif;
+    font-size: 1.4em;
+    font-weight: 400;
+    line-height: 1.3em;
+    margin-bottom: 0.4em;
+  }
+
+  p.date {
+    color: transparentize($base-font-color, 0.6);
+    font-family: $serif-2;
+    font-size: 0.9em;
+    font-style: italic;
+    margin-bottom: 0.3em;
+  }
+
+  p {
+    font-family: $serif-2;
+    font-size: 1.8em;
+    line-height: 1.8em;
+    margin: 0 auto .5em;
+
+    span {
+      font-family: $sans-serif;
+      font-weight: 700;
+    }
+  }
+
+  a.read-more {
+    display: inline-block;
+    font-family: $sans-serif;
+    font-size: 0.8em;
+    font-weight: 700;
+    margin-left: 0.2em;
+    position: relative;
+    text-transform: uppercase;
+
+    span {
+      font-family: $serif;
+      font-size: 1.5em;
+      font-style: normal;
+      position: absolute;
+      right: -12px;
+      top: -1px;
+    }
+  }
+
+  hr {
+    width: 3em;
+  }
+
+  p.author {
+    font-family: $serif-2;
+    font-style: italic;
+  }
 }
-h4 {
-  font-weight: bold;
-  font-size: 2rem;
-}
-h5 {
-  font-weight: bold;
-  font-size: 1.8rem;
-  margin: 0;
-}
-.fa { color: $accent-color; }
-a:link, a:visited, a:active {
-  font-weight: bold;
-  color: $action-color;
-}
-a:hover { color: $dark-gray; }
-.center { text-align: center; }
 
 
 // Nav //
@@ -298,89 +388,6 @@ a:hover { color: $dark-gray; }
 form {
   float: left;
   margin: 0 1rem;
-}
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  a:link, a:visited, a:active {
-    color: $dark-gray;
-    font-weight: normal;
-    border-bottom: 0;
-    text-decoration: none;
-  }
-}
-
-.card {
-  border: $card-border;
-  border-radius: $base-border-radius;
-  box-shadow: 0 2px 4px darken($base-background-color, 10%);
-  cursor: pointer;
-  flex-basis: 15em;
-  flex-grow: 1;
-  margin: 0 $card-margin $base-spacing $card-margin;
-  position: relative;
-  transition: all 0.2s ease-in-out;
-
-  .card-image {
-    background: url("../../images/card-hexagons.png") no-repeat center top;
-    height: 110px;
-    max-height: 150px;
-    overflow: hidden;
-
-    img {
-      @include border-top-radius($base-border-radius);
-      opacity: 1;
-      transition: all 0.2s ease-in-out;
-      width: 35px;
-      margin: 3rem auto;
-      display: block;
-    }
-    .square { margin-top: 2rem; }
-  }
-
-  .card-header {
-    background-color: $card-header-background;
-    border-radius: $base-border-radius $base-border-radius 0 0;
-    font-weight: bold;
-    text-align: center;
-    line-height: 2.5em;
-    padding: ($base-spacing / 3) ($base-spacing / 2);
-    transition: all 0.2s ease-in-out;
-    h3 {
-      color: $white;
-      margin-top: 0 !important;
-    }
-  }
-
-  .card-copy {
-    background-color: $white;
-    font-size: 0.9em;
-    line-height: 1.5em;
-    padding: ($base-spacing / 2) ($base-spacing / 2);
-
-    p {
-      margin: 0 0 ($base-spacing / 2);
-    }
-  }
-
-  &:focus,
-  &:hover {
-    cursor: pointer;
-
-    img {
-      opacity: $card-image-hover-opacity;
-    }
-  }
-
-  &:active {
-    background-color: $card-background;
-
-    .card-header {
-      background-color: $card-background;
-    }
-  }
-  .project { height: 220px; }
 }
 
 
