--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -2748,7 +2748,7 @@ body {
     color: #799299; }
     @media screen and (min-width: 40em) {
       body h1 {
-        font-size: 4.6em; } }
+        font-size: 4.4em; } }
   body h2 {
     font-family: "Merriweather", serif;
     font-size: 3em;
@@ -2772,10 +2772,10 @@ body {
     white-space: nowrap; }
   body h3 {
     font-family: "Lusitana", serif;
-    font-size: 1.4em;
+    font-size: 2.3em;
     font-weight: 400;
     line-height: 1.3em;
-    margin-bottom: 0.4em; }
+    margin: 1em; }
   body p.date {
     color: rgba(51, 51, 51, 0.4);
     font-family: "Merriweather", serif;
@@ -2881,6 +2881,7 @@ body {
         .centered-navigation ul li.nav-link:last-of-type {
           border-right: 0; } }
     .centered-navigation ul li.nav-link a {
+      font-size: 1.5em;
       color: #CC3B6A;
       display: inline-block;
       outline: none;
@@ -2896,49 +2897,23 @@ body {
         .centered-navigation ul li.nav-link a {
           padding: 0 2.2em; } }
 
-form {
-  float: left;
-  margin: 0 1rem; }
-
 #featuredProjects {
-  max-width: 760px; }
-
-.project {
-  width: 350px;
-  margin: .5rem .5rem 2rem;
-  background: url("../../images/card-hexagons.png") no-repeat center top;
-  background-size: 180%;
-  background-clip: content-box;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75); }
-  .project .logoWrap {
-    height: 75px;
-    margin: 1rem 0;
-    padding: 3rem 0;
-    background: url("../../images/activeHex.png") no-repeat center;
-    background-size: 48px; }
-    .project .logoWrap img {
-      width: 40px;
-      margin: 0 auto;
-      display: block; }
-    @media screen and (min-width: 53.75em) {
-      .project .logoWrap {
-        height: 56px;
-        padding: 2rem 0; } }
-  .project h3 {
-    text-align: center;
-    font-weight: bold; }
-  .project p {
+  max-width: 800px;
+  margin: .5rem auto 2rem; }
+  #featuredProjects img {
+    width: 40px;
+    margin: 10px auto 0;
+    display: block; }
+  #featuredProjects .square {
+    width: 30px; }
+  #featuredProjects p {
+    font-size: 1.4em;
+    line-height: 1.6em;
     text-align: center;
     font-weight: normal;
     color: #333;
-    padding: 0 2rem;
+    padding: 0;
     text-decoration: none; }
-  @media screen and (min-width: 53.75em) {
-    .project {
-      float: left;
-      margin: .5rem; } }
 
 #process {
   max-width: 700px;
@@ -3033,5 +3008,58 @@ form {
       color: #333;
       line-height: 1.5em;
       margin: auto; }
+
+.footer {
+  background: #565656;
+  display: inline-block;
+  padding: 1.5em;
+  width: 100%;
+  margin-top: 30px; }
+  .footer ul {
+    line-height: 1.5em;
+    margin: 0 0 1em 0;
+    padding: 0; }
+    @media screen and (min-width: 53.75em) {
+      .footer ul {
+        float: left;
+        line-height: 1.8em;
+        margin-bottom: 0;
+        margin-left: 1em; } }
+  .footer ul li {
+    list-style: none;
+    padding-right: 2em; }
+    @media screen and (min-width: 53.75em) {
+      .footer ul li {
+        display: inline;
+        text-align: left; } }
+  .footer ul li a {
+    font-size: 1.5em;
+    color: white;
+    text-decoration: none; }
+    .footer ul li a:focus, .footer ul li a:hover {
+      color: white; }
+  @media screen and (min-width: 53.75em) {
+    .footer .footer-secondary-links {
+      float: right; } }
+  .footer .footer-secondary-links ul.footer-social {
+    margin: 1em 0 0 0; }
+    @media screen and (min-width: 53.75em) {
+      .footer .footer-secondary-links ul.footer-social {
+        float: right;
+        margin-top: 0; } }
+    .footer .footer-secondary-links ul.footer-social li {
+      float: left;
+      font-size: 1em;
+      line-height: 0;
+      margin: 0;
+      padding-right: 0.7em; }
+      .footer .footer-secondary-links ul.footer-social li:last-child {
+        padding-right: 0; }
+    .footer .footer-secondary-links ul.footer-social img {
+      height: 1.6em;
+      opacity: 0.7;
+      padding: 1px; }
+      .footer .footer-secondary-links ul.footer-social img:focus, .footer .footer-secondary-links ul.footer-social img:hover {
+        opacity: 1; }
 
 /*# sourceMappingURL=main.css.map */
