--- a/assets/style/_buttons.scss
+++ b/assets/style/_buttons.scss
@@ -7,6 +7,7 @@ $button-stroke: inset 0 0 0 2px;
 // scss-lint:disable PropertyCount
 .button-wrapper {
   padding: .5em 0 !important;
+  margin-bottom: 40px;
   text-align: center;
 }
 
