--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -75,6 +75,8 @@ html { font-size: 62.5%; }
 body {
   margin: 0;
   padding: 0;
+  font-family: $serif-2;
+  text-align: left;
 }
 section {
   max-width: 800px;
@@ -109,7 +111,7 @@ header {
   li {
     width: 43px;
     height: 52px;
-    padding: 13px 1px 0 10px;
+    padding: 14px 1px 0 9px;
     float: left;
     background: url("../../images/inactiveHex.png") no-repeat center top;
     background-size: 44px;
@@ -157,143 +159,117 @@ header {
   margin: 0 auto;
   display: block;
 }
-.portfolio #hex-image { padding-top: 9.5rem !important; }
+.portfolio #hex-image { padding-top: 15.5rem !important; }
 
 
 // Typography //
-body {
-  font-family: $serif-2;
+h1, h2, h3, p {
+  margin: 0;
+}
+
+hr {
+  border-bottom: 1px solid $light-gray;
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+  margin: $base-spacing 0;
+}
+
+p {
+  color: $base-font-color;
+  line-height: $base-line-height;
+}
+
+a {
+  color: $action-color;
+  text-decoration: none;
+}
+
+.type {
+  border-bottom: 1px solid;
+  display: inline-block;
+  font-family: $sans-serif;
+  font-size: 0.7em;
+  font-weight: 700;
+  margin-bottom: 2em;
+  padding: 0.3em 0;
   text-align: left;
+  text-transform: uppercase;
+}
 
-  h1, h2, h3, p {
-    margin: 0;
+h1 {
+  font-family: $serif;
+  font-size: 3.4em;
+  font-weight: 700;
+  margin-bottom: 1em;
+  padding: 0 1em;
+  text-align: center;
+  color: $accent-color;
+
+  @include media($medium-screen) {
+    font-size: 4.4em;
   }
+}
 
-  hr {
-    border-bottom: 1px solid $light-gray;
-    border-left: 0;
-    border-right: 0;
-    border-top: 0;
-    margin: $base-spacing 0;
+h2 {
+  font-family: $serif-2;
+  font-size: 3em;
+  font-weight: 400;
+  line-height: 1em;
+  margin-bottom: 0.9em;
+  padding: 0 1em;
+  text-align: center;
+  color: $accent-color;
+
+  @include media($medium-screen) {
+    font-size: 4.2em;
   }
+}
 
-  p {
-    color: $base-font-color;
-    line-height: $base-line-height;
-  }
+code {
+  background: #F7F7F7;
+  border-radius: $base-border-radius * 1.5;
+  border: 1px solid #E0E0E0;
+  font-family: monaco;
+  font-size: 0.75em;
+  font-style: normal;
+  padding: 0.1em 0.4em;
+  white-space: nowrap;
+}
 
-  a {
-    color: $action-color;
-    text-decoration: none;
-  }
+h3 {
+  font-family: $serif;
+  font-size: 3.2em;
+  font-weight: 700;
+  line-height: 2.3em;
+  color: $accent-color;
+}
 
-  .type {
-    border-bottom: 1px solid;
-    display: inline-block;
+h4 {
+  font-family: $serif;
+  font-size: 2em;
+  font-weight: 400;
+  text-align: center;
+  color: $accent-color;
+  margin: 0 0 1em 0;
+}
+
+p, li {
+  font-family: $serif-2;
+  font-size: 1.8em;
+  margin: 0 auto .5em;
+
+  span {
     font-family: $sans-serif;
-    font-size: 0.7em;
     font-weight: 700;
-    margin-bottom: 2em;
-    padding: 0.3em 0;
-    text-align: left;
-    text-transform: uppercase;
   }
+}
+p { line-height: 1.8em; }
+small { font-size: 1.4em; }
+.centered { text-align: center; }
 
-  h1 {
-    font-family: $serif;
-    font-size: 3.4em;
-    font-weight: 700;
-    margin-bottom: 1em;
-    padding: 0 1em;
-    text-align: center;
-    color: $accent-color;
-
-    @include media($medium-screen) {
-      font-size: 4.4em;
-    }
-  }
-
-  h2 {
-    font-family: $serif-2;
-    font-size: 3em;
-    font-weight: 400;
-    line-height: 1em;
-    margin-bottom: 0.9em;
-    padding: 0 1em;
-    text-align: center;
-    color: $accent-color;
-
-    @include media($medium-screen) {
-      font-size: 4.2em;
-    }
-  }
-
-  code {
-    background: #F7F7F7;
-    border-radius: $base-border-radius * 1.5;
-    border: 1px solid #E0E0E0;
-    font-family: monaco;
-    font-size: 0.75em;
-    font-style: normal;
-    padding: 0.1em 0.4em;
-    white-space: nowrap;
-  }
-
-  h3 {
-    font-family: $serif;
-    font-size: 2.3em;
-    font-weight: 400;
-    line-height: 1.3em;
-    margin: 1em;
-  }
-
-  p.date {
-    color: transparentize($base-font-color, 0.6);
-    font-family: $serif-2;
-    font-size: 0.9em;
-    font-style: italic;
-    margin-bottom: 0.3em;
-  }
-
-  p {
-    font-family: $serif-2;
-    font-size: 1.8em;
-    line-height: 1.8em;
-    margin: 0 auto .5em;
-
-    span {
-      font-family: $sans-serif;
-      font-weight: 700;
-    }
-  }
-
-  a.read-more {
-    display: inline-block;
-    font-family: $sans-serif;
-    font-size: 0.8em;
-    font-weight: 700;
-    margin-left: 0.2em;
-    position: relative;
-    text-transform: uppercase;
-
-    span {
-      font-family: $serif;
-      font-size: 1.5em;
-      font-style: normal;
-      position: absolute;
-      right: -12px;
-      top: -1px;
-    }
-  }
-
-  hr {
-    width: 3em;
-  }
-
-  p.author {
-    font-family: $serif-2;
-    font-style: italic;
-  }
+hr {
+  width: 3em;
 }
 
 
@@ -371,7 +347,6 @@ body {
       &:last-of-type { border-right: 0; }
     }
     a {
-      font-size: 1.5em;
       color: $action-color;
       display: inline-block;
       outline: none;
@@ -421,14 +396,7 @@ body {
 }
 
 // Project Containers //
-#project-container {
-  margin-top: 4rem;
-  .projectLink {
-    text-align: center;
-    margin: 0 auto;
-    display: block;
-  }
-}
+#project-container { margin-top: 4rem; }
 
 
 //  Resume //
@@ -495,7 +463,7 @@ body {
   justify-content: center;
   text-align: center;
 
-  .flex-box {
+  .flex-box { 
     align-self: stretch;
     background: $flex-box-background;
     border: 1px solid $light-gray;
@@ -518,6 +486,11 @@ body {
         display: block;
         width: 100%;
       }
+    }
+    h3 {
+      font-size: 2.2em;
+      line-height: 1.5em;
+      margin: 1em;
     }
     a:link, a:active, a:visited{
       color: $dark-gray;
@@ -560,7 +533,6 @@ body {
   }
 
   ul li a {
-    font-size: 1.5em;
     color: $footer-link-color;
     text-decoration: none;
 
