--- a/assets/fancybox/source/jquery.fancybox.css
+++ b/assets/fancybox/source/jquery.fancybox.css
@@ -224,14 +224,12 @@
 .fancybox-title-float-wrap .child {
 	display: inline-block;
 	margin-right: -100%;
-	padding: 2px 20px;
-	background: transparent; /* Fallback for web browsers that doesn't support RGBa */
-	background: rgba(0, 0, 0, 0.8);
+	padding: 4px 20px;
+	background: #fff;
 	-webkit-border-radius: 15px;
 	   -moz-border-radius: 15px;
 	        border-radius: 15px;
-	text-shadow: 0 1px 2px #222;
-	color: #FFF;
+	color: #000;
 	font-weight: bold;
 	line-height: 24px;
 	white-space: nowrap;
