--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -404,6 +404,7 @@ hr {
   h3 { margin-top: 5rem; }
   h3, h4 { text-align: center; }
   section { margin-top: 100px; }
+  .flex-box { max-width: 350px; }
   #fellow, #vis, #intern {
     img {
       max-width: 65px;
