--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -574,7 +574,7 @@ h2 {
   font-weight: 400;
   line-height: 1em;
   margin-bottom: 0.9em;
-  padding: 0 1em;
+  padding: 0 .5em;
   text-align: center;
   color: #799299; }
   @media screen and (min-width: 40em) {
@@ -600,11 +600,11 @@ h3 {
 
 h4 {
   font-family: "Lusitana", serif;
-  font-size: 2em;
+  font-size: 2.5em;
   font-weight: 400;
   text-align: center;
   color: #799299;
-  margin: 0 0 1em 0; }
+  margin: .5em 0; }
 
 p, li {
   font-family: "Merriweather", serif;
@@ -647,7 +647,8 @@ hr {
     line-height: 60px;
     text-decoration: none;
     text-align: center;
-    font-weight: bold; }
+    font-weight: bold;
+    font-size: 1.8em; }
     @media screen and (min-width: 53.75em) {
       .centered-navigation .centered-navigation-mobile-menu {
         display: none; } }
@@ -744,8 +745,8 @@ hr {
   text-align: center; }
 .resume section {
   margin-top: 100px; }
-.resume .flex-box {
-  max-width: 350px; }
+.resume .flex-box h3 {
+  margin-top: 0; }
 .resume #fellow img, .resume #vis img, .resume #intern img {
   max-width: 65px;
   margin: 0 auto;
@@ -758,8 +759,6 @@ hr {
   background: url("../../images/resume-fellow.png") no-repeat center top;
   background-size: 100%;
   background-clip: content-box; }
-  .resume #fellow h3 {
-    margin-top: 7rem; }
   .resume #fellow img {
     padding-top: 15rem; }
 .resume #vis {
@@ -797,6 +796,7 @@ hr {
     content: "";
     display: table; }
   .flex-boxes .flex-box {
+    max-width: 350px;
     align-self: stretch;
     background: #fafafa;
     border: 1px solid #E0E0E0;
