--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -451,20 +451,20 @@ section {
 
 header {
   max-width: 800px;
-  margin: 5rem auto;
+  margin: 3rem auto;
   z-index: 10; }
   header::after {
     clear: both;
     content: "";
     display: table; }
   header p {
-    max-width: 700px;
     text-align: center;
     margin: 0 auto;
-    padding: 0 2rem; }
+    padding: 0 1rem; }
 
 .social-media {
-  margin-bottom: 1em; }
+  width: 190.4px;
+  margin: 0 auto 1em; }
   .social-media::after {
     clear: both;
     content: "";
@@ -560,7 +560,7 @@ h1 {
   font-family: "Lusitana", serif;
   font-size: 3.4em;
   font-weight: 700;
-  margin-bottom: 1em;
+  margin-bottom: .2em;
   padding: 0 1em;
   text-align: center;
   color: #799299; }
@@ -615,7 +615,7 @@ p, li {
     font-weight: 700; }
 
 p {
-  line-height: 1.8em; }
+  line-height: 1.6em; }
 
 small {
   font-size: 1.4em; }
@@ -830,7 +830,7 @@ hr {
   display: inline-block;
   padding: 1.5em;
   width: 100%;
-  margin-top: 30px; }
+  margin: 30px 0 0; }
   .footer ul {
     line-height: 1.5em;
     margin: 0 0 1em 0;
