--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -354,7 +354,7 @@ section {
   padding: 2rem; }
 
 #svg-bg {
-  margin-top: 10rem; }
+  margin-top: 6rem; }
 
 header {
   max-width: 800px;
@@ -381,11 +381,10 @@ header {
   height: 250px;
   background: url("../../images/sub-hexagons.png") no-repeat center bottom;
   background-size: cover;
-  background-clip: content-box;
-  margin-top: 60px; }
+  background-clip: content-box; }
 #secondary #hex-image {
   max-width: 65px;
-  padding-top: 17rem; }
+  padding-top: 12rem; }
 
 .hexBG {
   width: 100%;
@@ -436,7 +435,7 @@ h1 {
   font-family: "Lusitana", serif;
   font-size: 3.4em;
   font-weight: 700;
-  margin-bottom: .2em;
+  margin-bottom: .5em;
   padding: 0 1em;
   text-align: center;
   color: #799299; }
@@ -510,13 +509,6 @@ hr {
   z-index: 7000;
   position: fixed;
   top: 0; }
-  .centered-navigation .in-progress {
-    width: 100%;
-    background-color: #ffffff;
-    border-bottom: 2px solid #CC3B6A;
-    font-size: 1.4rem;
-    text-align: center;
-    padding: 1rem; }
   .centered-navigation .centered-navigation-mobile-menu {
     color: #CC3B6A;
     display: block;
